--- a/Jobs/Engine/Geocoding/Properties/Resources.resx
+++ b/Jobs/Engine/Geocoding/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="EntfernungZuWeit" xml:space="preserve">
+    <value>Der gefundene Einsatzort ist zu weit Weg!</value>
+  </data>
   <data name="ExportCloudMadeDescription" xml:space="preserve">
     <value>Verwendet den CloudMade Geocoding Dienst.</value>
   </data>
